# src/routes/country.routes.ts
@@ -1,0 +1,12 @@
+import { Router } from 'express'
+import { CountryController } from '../modules/country/controllers/country.controller'
+
+const countryRoutes = Router()
+const countryController = new CountryController
+
+countryRoutes.get(
+  "/",
+  countryController.handle
+)
+
+export { countryRoutes }
