# src/routes/index.ts
@@ -1,4 +1,5 @@
 import { Router } from "express"
+import { countryRoutes } from "./country.routes"
 import { orderRoutes } from "./order.routes"
 import { sellerRoutes } from "./seller.routes"
 
@@ -6,5 +7,6 @@ const router = Router()
 
 router.use("/order", orderRoutes)
 router.use("/seller", sellerRoutes)
+router.use("/country", countryRoutes)
 
 export { router }
